--- a/style.css
+++ b/style.css
@@ -55,14 +55,14 @@ li a:hover{
 
 
 /* main body */
-section{
+/* section{
     display: flex;
     justify-content: center;
     height: fit-content;
-}
+} */
 
 /* home section */
-.home{
+#home{
     background-image: url(assests/bg1.png);
     display: flex;
     justify-content: center;
@@ -119,4 +119,177 @@ section{
 .social-icon img{
     width: 50px;
     height: 50px;
+}
+
+/* product-section */
+
+.product-title{
+    display: flex;
+    justify-content: center;
+    font-family: var(--font-family);
+    font-size: 100px;
+}
+
+.card-container{
+    justify-content: space-around;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+}
+
+.card{
+    position: relative;
+    /* padding: 50px; */
+    margin: 30px;
+    /* border: 1px solid #dc1cd1; */
+    background-color: #e8e1e169;
+    border-radius: 10px;
+    box-shadow: 20px 20px 60px #9219b699, inset -20px -20px 90px rgb(181 30 157 / 24%);
+}
+
+.h-s{
+    display: none;
+}
+
+.card:hover{
+
+    .h-s{
+        display: block;
+        position: absolute;
+        left: 20px;
+        top: 20px;
+        transform: translateX(1px);
+        cursor: pointer;
+        opacity: 1;
+    }
+    
+    .h-s >*{
+        display: flex;
+        justify-self: center;
+        align-items: center;
+        position: relative;
+        margin: 4px;
+        border-radius: 10px;
+        border: 2px solid #706f6f99;
+        box-shadow: 20px 20px 60px #00000042, inset -20px -20px 90px rgb(193 204 191 / 11%);
+    }
+    
+    .h-s svg{
+        padding: 10px;
+        fill: #eee6e6;
+        stroke: #706f6f99;
+        stroke-width: 35px;
+    }
+
+}
+
+.card-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.card-img img{
+    width: 150px;
+    height: 150px;
+}
+
+.card-text >*, .card-rating{
+    text-align: center;
+    margin: 5px;
+}
+
+.card-text article{
+    color: gray;
+}
+
+.card-rating .str{
+    fill: #e8e1e169;
+    stroke: #000000;
+    stroke-width: 15px;
+}
+
+.card-rating .checked{
+    fill: orange;
+}
+
+.card button{
+    margin: 25px 95px 30px 95px;
+    background-image: linear-gradient(to right,rgb(182 29 156), rgb(130 23 192) );
+    color: white;
+    width: 115px;
+    height: 40px;
+    font-size: 20px;
+    border: 1px solid rgb(182 29 156);
+}
+
+/* about section */
+
+#about{
+    background-image: url(assests/loging_bg.png);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 90vh;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: -1;
+}
+
+.about-image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-image img{
+    width: 500px;
+    height: 500px;
+}
+
+.about-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+}
+
+/* review section */
+
+.review-container{
+    justify-content: space-around;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+}
+
+.review-top{
+    display: flex;
+    margin: 10px;
+    align-items: center;
+}
+
+.profile-img{
+    margin: 10px;
+}
+
+.profile-img img{
+    width: 75px;
+    height: 75px;
+    border-radius: 3rem;
+}
+
+.profile-name{
+    margin: 10px;
+}
+
+.review-desc{
+    margin: 10px;
+    text-align: left;
 }
