--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: var(--font-family);
 }
 
 :root{
     --font-family: 'Poppins', sans-serif;
     
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 .desktop-nav{
@@ -24,6 +29,7 @@
 .website-logo{
     font-size: 60px;
     color: black;
+    cursor: default;
 }
 
 .website-logo span:nth-child(2){
@@ -51,6 +57,28 @@ li a{
 li a:hover{
     text-decoration: underline;
     text-underline-offset: 1rem;
+}
+
+.right{
+    display: flex;
+    text-align: center;
+    font-size: 12px;
+    font-family: var(--font-family);
+}
+
+.right>*{
+    margin: 5px;
+    cursor: pointer;
+}
+
+.right>*:hover{
+    text-decoration: underline;
+    text-underline-offset: 8px;
+}
+
+.right svg{
+    width: 25px;
+    height: 25px;
 }
 
 
@@ -81,7 +109,7 @@ li a:hover{
     background: -webkit-linear-gradient(rgb(182 29 156 / 52%), rgb(130 23 192) );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 65px;
+    font-size: 55px;
 }
 
 .text h1:nth-child(2){
@@ -97,6 +125,7 @@ li a:hover{
     font-size: 20px;
     border-radius: 2rem;
     border: none;
+    cursor: pointer;
     box-shadow: 20px 20px 60px #0000006d, inset -20px -20px 90px rgba(159, 181, 154, 0);
 }
 
@@ -127,7 +156,11 @@ li a:hover{
     display: flex;
     justify-content: center;
     font-family: var(--font-family);
-    font-size: 100px;
+    font-size: 80px;
+    background: -webkit-linear-gradient(rgb(182 29 156 / 52%), rgb(130 23 192) );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 30px;
 }
 
 .card-container{
@@ -258,6 +291,49 @@ li a:hover{
     font-size: 100px;
 }
 
+.about-text article:first-child{
+    font-size: 40px;
+    position: absolute;
+    top: 120px;
+    right: 100px;
+}
+.about-text article:nth-child(2){
+    font-size: 75px;
+    position: absolute;
+    top: 150px;
+    right: 100px;
+}
+.about-text article:nth-child(3){
+    font-size: 200px;
+    position: absolute;
+    top: 180px;
+    right: 100px;
+    background: -webkit-linear-gradient(rgb(182 29 156 / 52%), rgb(130 23 192) );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.about-text article:nth-child(4){
+    font-size: 78px;
+    position: absolute;
+    top: 380px;
+    right: 100px;
+    color: rgba(143, 141, 141, 0.63);
+}
+
+.about-text article:nth-child(5){
+    font-size: 70px;
+    position: absolute;
+    top: 460px;
+    right: 100px;
+}
+.about-text article:nth-child(5) strong{
+    background: -webkit-linear-gradient(rgb(182 29 156 / 52%), rgb(130 23 192) );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+
 /* review section */
 
 .review-container{
@@ -292,4 +368,118 @@ li a:hover{
 .review-desc{
     margin: 10px;
     text-align: left;
+}
+
+/* service section */
+
+.s-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45vh;
+    margin: 30px;
+}
+
+.s-delivery, .s-replace, .s-support{
+    margin: 100px;
+    text-align: center;
+}
+
+.s-svg{
+    fill: rgb(137 24 187);
+    height: 50px;
+    width: 50px;
+}
+
+/* footer section */
+
+.foot{
+    background-color: white;
+    height: 15rem;
+    box-shadow: 20px 20px 60px #0000006d, inset -20px -20px 90px rgba(159, 181, 154, 0.57);
+
+}
+
+.f-container{
+    display: flex;
+    /* justify-content: space-around; */
+    align-items: center;
+}
+
+.f-details-1{
+    margin-left: 80px;
+    margin-right: 58px;
+} 
+
+.f-details-1 article{
+    display: flex;
+    gap: 5px;
+    margin-bottom: 5px;
+}
+.f-details-1 svg{
+    padding-top: 3px;
+}
+
+.f-details-2{
+    margin-left: 60px;
+    margin-right: 100px;
+} 
+.f-details-3{
+    margin-left: 95px;
+    margin-right: 100px;
+
+} 
+.f-details-4{
+    margin-left: 98px;
+    margin-right: 100px;
+}
+
+.f-details-5{
+    margin-left: 57px;
+}
+
+
+
+.f-details-2, .f-details-3{
+    text-align: center;
+}
+
+.f-title{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 40px;
+    margin-bottom: 10px;
+}
+
+.f-details-4 .social-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.social-icon svg{
+    width: 25px;
+    height: 25px;
+}
+
+input[type=text]{
+    width: 210px;
+    padding: 7px;
+    border-radius: 15px;
+    border: 1px solid white;
+    background-color: #c6c2c2a6;
+}
+
+input[type=submit]{
+    width: 85px;
+    margin-top: 2px;
+    height: 25px;
+    border-radius: 15px;
+    background-image: linear-gradient(to right,rgb(182 29 156), rgb(130 23 192) );
+    color: white;
+    text-align: center;
+    border: 1px solid white;
+    cursor: pointer;
 }
