--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html{
     scroll-behavior: smooth;
 }
 
-.desktop-nav{
+nav{
     background-color: white;
     display: flex;
     justify-content: space-around;
@@ -80,6 +80,81 @@ li a:hover{
     width: 25px;
     height: 25px;
 }
+
+/* hamburger-nav */
+.hamburger-nav{
+    display: none;
+}
+
+.hamburger-menu{
+    position: relative;
+    display: inline-block;
+}
+
+.hamburger-icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+    left: 2%;
+}
+
+.hamburger-icon span{
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-link{
+    position: absolute;
+    top: 52px;
+    left: -10px;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+    box-shadow: 20px 60px 60px #0000006d, inset -20px 65px 90px rgba(159, 181, 154, 0.365);
+
+}
+
+.menu-link a{
+    display: block;
+    text-align: center;
+    padding: 10px;
+    font-size: 1.5rem;
+    color: var(--white);
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-link.open{
+    max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child{
+    transform: rotate(45deg) translate(10px, 5px);
+}
+.hamburger-icon.open span:nth-child(2){
+    opacity: 0;
+}
+.hamburger-icon.open span:last-child{
+    transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child{
+    transform: none;
+}
+.hamburger-icon span:first-child{
+    opacity: 1;
+}
+.hamburger-icon span:first-child{
+    transform: none;
+}
+
 
 
 /* main body */
@@ -249,7 +324,12 @@ li a:hover{
     fill: orange;
 }
 
-.card button{
+.button {
+    display: flex;
+    justify-content: center;
+}
+
+.card .button button{
     margin: 25px 95px 30px 95px;
     background-image: linear-gradient(to right,rgb(182 29 156), rgb(130 23 192) );
     color: white;
@@ -285,48 +365,40 @@ li a:hover{
 }
 
 .about-text{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 100px;
+    display: grid;
+    justify-items: end;
+    
 }
 
-.about-text article:first-child{
+.about-text p:first-child{
     font-size: 40px;
-    position: absolute;
-    top: 120px;
-    right: 100px;
 }
-.about-text article:nth-child(2){
+.about-text p:nth-child(2){
     font-size: 75px;
-    position: absolute;
-    top: 150px;
-    right: 100px;
+    margin-top: -70px;
+    margin-bottom: -70px;
 }
-.about-text article:nth-child(3){
+.about-text p:nth-child(3){
     font-size: 200px;
-    position: absolute;
-    top: 180px;
-    right: 100px;
+    margin-top: -70px;
+    margin-bottom: -70px;
     background: -webkit-linear-gradient(rgb(182 29 156 / 52%), rgb(130 23 192) );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.about-text article:nth-child(4){
+.about-text p:nth-child(4){
+    margin-top: -70px;
+    margin-bottom: -70px;
     font-size: 78px;
-    position: absolute;
-    top: 380px;
-    right: 100px;
     color: rgba(143, 141, 141, 0.63);
 }
 
-.about-text article:nth-child(5){
+.about-text p:nth-child(5){
+    margin-top: -70px;
+    margin-bottom: -70px;
     font-size: 70px;
-    position: absolute;
-    top: 460px;
-    right: 100px;
 }
-.about-text article:nth-child(5) strong{
+.about-text p:nth-child(5) strong{
     background: -webkit-linear-gradient(rgb(182 29 156 / 52%), rgb(130 23 192) );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -393,77 +465,6 @@ li a:hover{
 
 /* footer section */
 
-.foot{
-    background-color: white;
-    height: 15rem;
-    box-shadow: 20px 20px 60px #0000006d, inset -20px -20px 90px rgba(159, 181, 154, 0.57);
-
-}
-
-.f-container{
-    display: flex;
-    /* justify-content: space-around; */
-    align-items: center;
-}
-
-.f-details-1{
-    margin-left: 80px;
-    margin-right: 58px;
-} 
-
-.f-details-1 article{
-    display: flex;
-    gap: 5px;
-    margin-bottom: 5px;
-}
-.f-details-1 svg{
-    padding-top: 3px;
-}
-
-.f-details-2{
-    margin-left: 60px;
-    margin-right: 100px;
-} 
-.f-details-3{
-    margin-left: 95px;
-    margin-right: 100px;
-
-} 
-.f-details-4{
-    margin-left: 98px;
-    margin-right: 100px;
-}
-
-.f-details-5{
-    margin-left: 57px;
-}
-
-
-
-.f-details-2, .f-details-3{
-    text-align: center;
-}
-
-.f-title{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 40px;
-    margin-bottom: 10px;
-}
-
-.f-details-4 .social-icon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
-
-.social-icon svg{
-    width: 25px;
-    height: 25px;
-}
-
 input[type=text]{
     width: 210px;
     padding: 7px;
@@ -482,4 +483,100 @@ input[type=submit]{
     text-align: center;
     border: 1px solid white;
     cursor: pointer;
+}
+
+
+.container{
+    background-color: white;
+    margin-top: auto;
+}
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer-col ul{
+    list-style: none;
+}
+
+.footer-col li{
+    margin: 0;
+}
+
+footer{
+    background-color: white;
+    box-shadow: 20px 20px 60px #0000006d, inset -20px -20px 90px rgba(159, 181, 154, 0.57);
+
+}
+
+.footer-col{
+    width: 15%;
+    padding: 35px 35px;
+}
+
+.footer-col h4{
+    font-size: 20px;
+    color: black;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.footer-col h4::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: rgb(155, 155, 148);
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    /* color: rgb(225, 220, 220); */
+    text-decoration: none;
+    font-weight: 300;
+    color: #7c7a7a;
+    display: block;
+    transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover{
+    color: #000000;
+    padding-left: 8px;
+}
+
+.footer-col .social-links a svg{
+    width: 25px;
+    height: 25px;
+    margin-top: 10px;
+    fill: white;
+}
+
+.footer-col .social-links a{
+    display: inline-block;
+    height: 42px;
+    width: 42px;
+    background-color: rgba(0, 0, 0, 0.829);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.footer-col .social-links a:hover{
+    background-color: #ffffff;
+
+    svg{
+    fill: black;
+    }
 }
