--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -71,45 +71,47 @@
         grid-auto-rows: auto;
     }
 
-    #about {
+    .about-container {
         position: relative;
-    }
+        background-image: none;
 
-    .about-image img {
-        width: 300px;
-        height: 300px;
-    }
 
-    .about-text {
-        display: grid;
-        position: absolute;
-        justify-items: end;
-    }
+        .about-image img {
+            width: 350px;
+            height: 350px;
+        }
 
-    .about-text p:first-child {
-        margin-top: -180px;
-        font-size: 40px;
-    }
+        .about-text {
+            display: inline-block;
+            position: absolute;
+            text-align: right;
+        }
 
-    .about-text p:nth-child(2) {
-        margin-top: -150px;
-        font-size: 75px;
-    }
+        .about-text h6 {
+            /* margin-top: -180px; */
+            font-size: 35px;
+        }
 
-    .about-text p:nth-child(3) {
-        margin-top: -120px;
-        font-size: 150px;
-    }
+        .about-text h4 {
+            margin-top: -30px;
+            font-size: 50px;
+        }
 
-    .about-text p:nth-child(4) {
-        margin-top: 0px;
-        font-size: 40px;
-        color: rgba(143, 141, 141, 0.63);
-    }
+        .about-text h1 {
+            margin-top: -70px;
+            font-size: 150px;
+        }
 
-    .about-text p:nth-child(5) {
-        margin-top: 38px;
-        font-size: 70px;
+        .about-text h5 {
+            margin-top: -60px;
+            font-size: 30px;
+            color: rgba(143, 141, 141, 0.63);
+        }
+
+        .about-text h3 {
+            margin-top: 50px;
+            font-size: 70px;
+        }
     }
 
     .review-container {
